--- a/nothing.html
+++ b/nothing.html
@@ -66,3 +66,7 @@
     </main>
 </body>
 </html> `
+<img src="{{ url_for('static', filename='images/' + album[2]) }}" alt="{{ album[0] }}">
+
+                <h2>{{ album[0] }}</h2>
+            <p>Released: {{ album[1] }}</p>
